# Paralela-Proyecto2

./: .gitignore  CMakeLists.txt  crypto.cpp  crypto.h  main.cpp  test.c  test.cpp
approaches/: approach.h  intercalado.cpp  naive.cpp  shuffle.cpp
crypto/: crypto.h
utils/: utils.cpp  utils.h
